# wifiduck

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
cases/retry-loop/: README.md  playbook.sql
cases/roam-blackhole/: README.md  playbook.sql
cases/wifi7-mlo-auth-loop/: README.md  playbook.sql
cases/wifi7-mlo-link-imbalance/: README.md  playbook.sql
docs/: wifi7.md
docs/superpowers/plans/: 2026-03-29-wifiduck-hero-banner.md  (+1 more)
examples/: run_open_pcap_analysis.py
examples/sql/: experience_failures.sql  quickstart.sql  sample_data_overview.sql  staged_triage.sql  triage_playbook.sql  wifi7_link_diagnostics.sql  wifi7_mlo_report.sql  wifi7_playbook.sql  wifi7_real_world_cases.sql
sample-data/jsonl/: wifi7_mlo_fixture.jsonl  wpa_induction_fixture.jsonl
sample-data/notes/: SOURCES.md
sample-data/pcap/: wpa-induction-first-64.pcap  wpa-induction-management-only.pcap
sql/: wifiduck.sql
sql/core/: classified_packets.sql  wifi_packets.sql
sql/macros/: channels.sql  client_experience.sql  dhcp_dns.sql  disconnects.sql  handshakes.sql  packet_classes.sql  reports.sql  retries.sql  roaming.sql  sessions.sql  wifi7.sql
src/wifiduck_tools/: __init__.py  open_pcap_analysis.py  report.py
tests/: test_readme_assets.py  test_report_cli.py  test_sql_macros.py  test_tools_smoke.py  test_wifi7_macros.py  test_workflows.py
tools/: open_pcap_analysis.py
wifiduck_tools/: __init__.py
(+2 files in other folders)
